--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.0",
     "react-router-dom": "5.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "recoil": "^0.6.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
