--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
     "recoil": "^0.6.1",
+    "recoil-persist": "^4.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
