--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/slug": "^5.0.3",
     "axios": "^0.25.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -18,9 +19,11 @@
     "react-paginate": "^8.1.0",
     "react-router-dom": "5.2.1",
     "react-scripts": "5.0.0",
+    "react-slug": "^0.1.2",
     "react-toastify": "^8.1.1",
     "recoil": "^0.6.1",
     "recoil-persist": "^4.0.0",
+    "slug": "^5.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
